Fix pagination spacing logic

--- a/src/app/features/game-detail/detail-media-slide.component.scss
+++ b/src/app/features/game-detail/detail-media-slide.component.scss
@@ -7,6 +7,10 @@
   --detail-media-image-inset-bottom: 16px;
 }
 
+:host(.with-pagination) {
+  --detail-media-image-inset-bottom: 20px;
+}
+
 .detail-media-slide {
   position: relative;
   display: flex;
